# langChain_learn

./: .env.example  LICENSE  README.md  pyproject.toml
Prompt_templates/: How to use few shot examples in chat models.ipynb  How to use few shot examples.ipynb
RAG/: Build a Question Answering application over a Graph Database.ipynb
